[gd_scene load_steps=8 format=3 uid="uid://ctfpnolcgnsox"]

[ext_resource type="Script" uid="uid://drf65cjjt7yf6" path="res://src/ui/ingame/level/end/artifact_diff_button.gd" id="1_y4wed"]
[ext_resource type="Texture2D" uid="uid://blxevfy314vt0" path="res://assets/map/artifact/shield_lion.webp" id="2_y4wed"]
[ext_resource type="Texture2D" uid="uid://dtayffjjwm2t2" path="res://assets/ui/currency/coin.webp" id="3_8yatw"]
[ext_resource type="PackedScene" uid="uid://d2htlbcx3auv5" path="res://src/ui/component/level_xp_container.tscn" id="3_wqjy7"]
[ext_resource type="AudioStream" uid="uid://b71fxnwfyr3lu" path="res://assets/map/sound/level/level_up_artifact.wav" id="4_put88"]
[ext_resource type="PackedScene" uid="uid://5gj6ya3tf0k0" path="res://src/ui/ingame/level/end/level_up_lbl.tscn" id="4_wqjy7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4wed"]
bg_color = Color(0.6, 0.6, 0.6, 0.0941176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.0941176)

[node name="ArtifactDiffButton" type="Button"]
custom_minimum_size = Vector2(256, 312)
offset_right = 256.0
offset_bottom = 282.0
focus_mode = 0
mouse_filter = 1
theme_override_styles/disabled = SubResource("StyleBoxFlat_y4wed")
disabled = true
button_mask = 0
script = ExtResource("1_y4wed")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ImageRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_y4wed")
stretch_mode = 3

[node name="LevelUpLbl" parent="MarginContainer/VBoxContainer/ImageRect" instance=ExtResource("4_wqjy7")]
unique_name_in_owner = true
layout_mode = 1

[node name="NameLbl" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "fire oder so so so"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="CountPrevLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.435294, 0, 1)
text = "999x"
horizontal_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = ">"

[node name="CountLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.517647, 0.788235, 0.466667, 1)
text = "999x"

[node name="LevelXpContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_wqjy7")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_8yatw")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CurrencyPrevLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "0"

[node name="CurrencyArrowLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = ">"

[node name="CurrencyLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999"

[node name="LevelUpArtifactPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_put88")
max_polyphony = 3
bus = &"Sound"
